force-app/main/default/objects/Event_Detail__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>End date of event</description>
    <inlineHelpText>Enter ending date of event</inlineHelpText>
    <label>End</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>