force-app/main/default/objects/Event_Detail__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <formula>Locations__r.Verified__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Verified ?</label>
    <type>Checkbox</type>
</CustomField>