force-app/main/default/objects/Event_Detail__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location look up field</description>
    <inlineHelpText>Location of event</inlineHelpText>
    <label>Locations</label>
    <referenceTo>Location_Address_Book__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>