force-app/main/default/objects/Event_Detail__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Maximum seats in event</description>
    <externalId>true</externalId>
    <inlineHelpText>Limited Seats</inlineHelpText>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>