force-app/main/default/objects/Event_Detail__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Event will repeat or not</description>
    <inlineHelpText>Attending the event 2nd time ?</inlineHelpText>
    <label>Recurring ?</label>
    <type>Checkbox</type>
</CustomField>