force-app/main/default/objects/Event_Detail__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Starting date of event</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>