force-app/main/default/objects/Event_Detail__c/validationRules/End_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Rule</fullName>
    <active>true</active>
    <description>End Date/Time must be at-least 1 day ahead of Start Date/Time ( If there is a value in End Date/Time field )</description>
    <errorConditionFormula>End__c &lt; Start__c+1</errorConditionFormula>
    <errorMessage>End date is not correct.</errorMessage>
</ValidationRule>