force-app/main/default/objects/Event_Detail__c/validationRules/Location_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Rule</fullName>
    <active>true</active>
    <description>If Event Type field value is In-Person then user must need to select Location on Event Record.</description>
    <errorConditionFormula>AND( ISPICKVAL( Event_Type__c , &apos;In-Person&apos;),  ISBLANK( Locations__c ) )</errorConditionFormula>
    <errorMessage>Enter Location.</errorMessage>
</ValidationRule>